# brainEngine

./: .gitignore  Readme.md  Readme.txt  brainEngine  carnosaEngine
src/: .depend  CMakeLists.txt  Makefile  carnosaEngine  evaluate.cpp  evaluate.h  fitness.cpp  fitness.h  main.cpp  misc.cpp  misc.h  neuro.cpp  neuro.h  position.cpp  position.h  search.cpp  search.h  todo.txt  uci.cpp  uci.h  visual.cpp  visual.h
